# PathOfBuildingMK2

./: .gitignore  Cargo.toml  README.md  STATUS.md
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml
app/pob-desktop/: Cargo.toml
app/pob-desktop/src/: main.rs
app/pob-web/: Cargo.toml  Trunk.toml  index.html
app/pob-web/src/: lib.rs
crates/pob-data/: Cargo.toml
crates/pob-data/src/: bases.rs  calc_sections.rs  cluster_jewel_mods.rs  cluster_jewels.rs  enchants.rs  flags.rs  gem.rs  item.rs  jewel_radius.rs  lib.rs  load.rs  minions.rs  monster_tables.rs  skill.rs  sprites.rs  tattoos.rs  timeless_jewels.rs  tree.rs
crates/pob-data/tests/: round_trip.rs
crates/pob-engine/: Cargo.toml
crates/pob-engine/examples/: gen_share_fixture.rs  parser_diag.rs
crates/pob-engine/src/: breakdown.rs  character.rs  cluster_synth.rs  env.rs  ggg_import.rs  item_parser.rs  jewel_geometry.rs  jewel_radius.rs  jewel_threshold.rs  lib.rs  minion.rs  mod_db.rs  mod_parser.rs  modifier.rs  pathfind.rs  perform.rs  pob_export.rs  pob_import.rs  power.rs  share.rs  skill.rs  timeless.rs
crates/pob-engine/tests/: end_to_end.rs  parser_coverage.rs  radius_jewels.rs  tree_alloc.rs  validation.rs
crates/pob-engine/tests/fixtures/: ggg_character_items.json  ggg_character_passive.json  pobb_in_share_code.txt
crates/pob-extract/: Cargo.toml
crates/pob-extract/src/: bases.rs  calc_sections.rs  cli.rs  cluster_jewel_mods.rs  cluster_jewels.rs  enchants.rs  gems.rs  lua_value.rs  main.rs  minions.rs  skills.rs  tattoos.rs  tree.rs
crates/pob-extract/test-builds/: marauder_l90_baseline.xml  marauder_l90_bleeding_cleave.xml  marauder_l90_cleave_with_axe.xml  marauder_l90_corrupted_cluster.xml  marauder_l90_infernal_cry.xml  witch_l90_arc_with_conductivity.xml  witch_l90_arc_with_hatred.xml  witch_l90_arc_with_items.xml  witch_l90_minimal_tree.xml  witch_l90_raise_spectre.xml  witch_l90_watchers_eye.xml
crates/pob-ui/: Cargo.toml
crates/pob-ui/shaders/: tree_arcs.wgsl  tree_edges.wgsl  tree_frames.wgsl  tree_groups.wgsl  tree_nodes.wgsl
crates/pob-ui/src/: anoint_picker.rs  build_store_disk.rs  build_store_wasm.rs  builds_folder_ctx_menu.rs  builds_folder_ops.rs  builds_folder_tree.rs  builds_tab.rs  calcs_tab.rs  cluster_overlay.rs  cluster_paste.rs  color_codes.rs  compare_tab.rs  config_tab.rs  ggg_fetch.rs  ggg_fetch_wasm.rs  import_export_tab.rs  items_tab.rs  keyring_store.rs  lib.rs  mastery_picker.rs  node_power_heatmap.rs  notable_db.rs  notes_tab.rs  party_tab.rs  pathfind.rs  popup.rs  set_switcher.rs  settings.rs  share_url_fetch.rs  shared_items.rs  skills_tab.rs  socket_renderer.rs  sortable_list.rs  tattoo_picker.rs  toasts.rs  tree_diff.rs  tree_layout.rs  tree_renderer.rs  tree_view.rs  undo.rs
crates/pob-ui/tests/: tree_layout.rs
data/: bases.json  calc_sections.json  timeless_jewels.json
data/sprites/: 3_25.json
data/trees/: 3_25.json
docs/: architecture-current.md  divergences.md  packaging.md
docs/decisions/: 0001-workspace-layout.md  0002-skills-deferred.md
