[workspace]
resolver = "2"
members = [
    "crates/pob-engine",
    "crates/pob-data",
    "crates/pob-extract",
    "crates/pob-ui",
    "app/pob-desktop",
    "app/pob-web",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/jferm/PathOfBuildingMK2"

[workspace.dependencies]
pob-engine = { path = "crates/pob-engine" }
pob-data = { path = "crates/pob-data" }
pob-ui = { path = "crates/pob-ui" }

# General
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
smallvec = { version = "1", features = ["serde", "union"] }
indexmap = { version = "2", features = ["serde"] }
ahash = "0.8"
bitflags = { version = "2", features = ["serde"] }

# Lua data ingest (for pob-extract only — engine must not depend on it)
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

# Compression / encoding (for POB share codes)
flate2 = "1"
base64 = "0.22"

# XML (for build files)
quick-xml = { version = "0.36", features = ["serialize"] }

# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
rfd = "0.15"
egui = "0.29"
wgpu = { version = "22", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Stylistic noise from pedantic that's not worth chasing for an active port.
uninlined_format_args = "allow"
doc_markdown = "allow"
unnecessary_wraps = "allow"
needless_pass_by_value = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"
ignored_unit_patterns = "allow"
match_same_arms = "allow"
return_self_not_must_use = "allow"
manual_let_else = "allow"
explicit_iter_loop = "allow"
match_wildcard_for_single_variants = "allow"
unnested_or_patterns = "allow"
# Issue #49: float comparisons against pinned outputs are
# intentional in the calc engine + tests. Asserting `out.get(...)
# == 75.0` is the readable way to write "this stat is exactly 75
# in this fixture". The pedantic warning catches a real footgun in
# general but in our case it's noise.
float_cmp = "allow"
# Issue #49: pedantic stylistic lints we trade away to keep the
# pob_data extractor + parser path tractable. Each is a real
# preference signal in greenfield code but not worth a churn pass
# in already-shipping modules.
manual_strip = "allow"
unreadable_literal = "allow"
assigning_clones = "allow"
implicit_hasher = "allow"
too_many_arguments = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
from_iter_instead_of_collect = "allow"
# Issue #49 (slice 3): final wave to clear clippy. These are all
# stylistic preferences; the value of `-D warnings` is catching
# real errors before they ship, not bikeshedding on
# `map(...).unwrap_or(...)` vs `map_or(...)`.
map_unwrap_or = "allow"
collapsible_if = "allow"
bool_to_int_with_if = "allow"
borrow_as_ptr = "allow"
explicit_counter_loop = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_debug_formatting = "allow"
manual_midpoint = "allow"
ptr_as_ptr = "allow"
ref_as_ptr = "allow"
manual_clamp = "allow"
large_enum_variant = "allow"
filter_next = "allow"
unnecessary_to_owned = "allow"
if_not_else = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
