[package]
name = "pob-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser entry point for Path of Building MK2 (wasm32)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pob-ui.workspace = true
eframe.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
# getrandom 0.3 surfaces in the dep tree (via egui-wgpu etc.) and requires the
# `wasm_js` feature plus a matching cfg (set in .cargo/config.toml) when
# targeting wasm32-unknown-unknown.
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true
