[package]
name = "pob-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data types and loaders for Path of Building MK2."

[dependencies]
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
indexmap.workspace = true
ahash.workspace = true
bitflags.workspace = true
thiserror.workspace = true

[lints]
workspace = true
