[package]
name = "pob-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui UI for Path of Building MK2."

[dependencies]
pob-engine.workspace = true
pob-data.workspace = true
egui.workspace = true
eframe.workspace = true
egui-wgpu = "0.29"
wgpu.workspace = true
bytemuck.workspace = true
tracing.workspace = true
ahash.workspace = true
rfd.workspace = true

[lints]
workspace = true
