[package]
name = "pob-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui UI for Path of Building MK2."

[dependencies]
pob-engine.workspace = true
pob-data.workspace = true
egui.workspace = true
eframe.workspace = true
egui-wgpu = "0.29"
wgpu.workspace = true
bytemuck.workspace = true
tracing.workspace = true
ahash.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "DomException",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Url",
    "Window",
] }

[lints]
workspace = true
