[package]
name = "pob-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui UI for Path of Building MK2."

[dependencies]
pob-engine.workspace = true
pob-data.workspace = true
egui.workspace = true
eframe.workspace = true
egui-wgpu = "0.29"
wgpu.workspace = true
bytemuck.workspace = true
tracing.workspace = true
ahash.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde_json.workspace = true

[dev-dependencies]
# Issue #209 (#238): the items-tab item-DB browser tests construct
# synthetic `ItemBase` fixtures whose `influence_tags` field is an
# `indexmap::IndexMap`. PR #238 used `indexmap::IndexMap::new()` in
# the test scaffold without adding the dev-dep, so the lib test
# build fails on main. Pulling indexmap in here closes that.
indexmap.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd.workspace = true
# Issue #32: live character import via the GGG character-window API.
# `ureq` is sync, blocking, and has a tiny dependency graph (no
# tokio / hyper) — fits the egui main-thread fetch pattern. We
# spawn a `std::thread` per request so the UI stays responsive.
ureq = { version = "2.12", default-features = false, features = ["tls"] }
# Issue #194: persist POESESSID in the OS keyring so users don't
# have to re-paste it each session. `keyring` v3 abstracts over
# Keychain (macOS), Credential Manager (Windows), and
# secret-service / kwallet (Linux). `apple-native` etc. select the
# OS-native backend at compile time per platform.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "DomException",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "Headers",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "Response",
    "Url",
    "Window",
] }

[lints]
workspace = true
